add_executable (4.DynStructures
        main.cpp
        BinaryTree.cpp
        BinaryTree.h
        Data.cpp
        Data.h
        DoubleLinkedList.cpp
        DoubleLinkedList.h
        Queue.cpp
        Queue.h
        SingleLinkedList.cpp
        SingleLinkedList.h
        Stack.cpp
        Stack.h
)
